hphp/hack/test/typecheck/dynamic_calls/builtins2.php.exp
File "builtins2.php", line 7, characters 38-49:
Invalid argument (Typing[4110])
  File "dyn_func_pointers.hhi", line 12, characters 22-27:
  Expected `string`
  File "dyn_func_pointers.hhi", line 12, characters 44-50:
  But got `dynamic`
